--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "16.8.0",
+    "react-dom": "16.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
